styles.css
/* ---------- GLOBAL ---------- */
html, body {
    height: 100%;
}

body {
    margin: 0;
    background: #FFFAF2;
    font-family: 'Inter', sans-serif;
    display: flex;
    flex-direction: column;

}

/* ---------- NAVBAR ---------- */
.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 16px 32px;
    background-color: #EDCDC9;
    border-radius: 0 0 20px 20px;
    border-bottom: 1px solid #ddd;
    width: 100%;
   
}
.nav-right a {
    text-decoration: none;
    margin-left: 16px;
    padding: 8px 18px;
    border-radius: 20px;
    color: #4a3f3f;
    transition: 0.2s ease;

}

.nav-right a:hover {
    background: #FFFAF2;
    color: #EDCDC9;
}

/* ---------- MAIN CONTENT ---------- */
.layout {
    max-width: 1000px;
    margin: 40px auto;
    padding: 0 20px;
}

/* Intro box container */
.intro {
    display: flex;
    align-items: center;
    gap: 24px;
    background-color: white;
    padding: 24px;
    border-radius: 12px;
    box-shadow: 0 2px 5px rgba(194,195,149,0.49);
}

/* Profile image */
.intro img {
    width: 220px;
    height: 220px;
    object-fit: cover;
    border-radius: 12px;
    border: 3px solid #EDCDC9;
}

/* Text section */
.intro-text {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.intro-text h2 {
    margin: 0 0 10px 0;
    font-size: 28px;
    color: #4a3f3f;
}

.intro-text p {
    font-size: 16px;
    line-height: 1.6;
    max-width: 600px;
    color: #4a3f3f;
}


/* ---------- FOOTER ---------- */
.footer {
    margin-top: auto;
    background-color: #EDCDC9;
    padding: 20px;
    text-align: center;
    border-radius: 20px 20px 0 0;
    font-size: 14px;
    color: #4a3f3f;
}

